@@ -310,12 +310,20 @@ function Remove-Service
     <#
     .SYNOPSIS
     Removes/deletes a service.
+
+    .DESCRIPTION
+    Removes an existing Windows service.  If the service doesn't exist, nothing happens.  The service is stopped before being deleted, so that the computer doesn't need to be restarted for the removal to complete.  Even then, sometimes it won't go away until a reboot.  I don't get it either.
+
+    .EXAMPLE
+    Remove-Service -Name DeathStar
+
+    Removes the Death Star Windows service.  It is destro..., er, stopped first, then destro..., er, deleted.  If only the rebels weren't using Linux!
     #>
     [CmdletBinding(SupportsShouldProcess=$true)]
     param(
         [Parameter(Mandatory=$true)]
         [string]
-        # The service name
+        # The service name to delete.
         $Name
     )
     
