@@ -193,7 +193,11 @@
         <h2>Syntax</h2>
     <pre class="Syntax"><code>Remove-Service [-Name] &lt;String&gt; [-WhatIf] [-Confirm] [&lt;CommonParameters&gt;]</code></pre>
     
-    
+        <h2>Description</h2>
+    <div class="Description">
+        <p>Removes an existing Windows service.  If the service doesn't exist, nothing happens.  The service is stopped before being deleted, so that the computer doesn't need to be restarted for the removal to complete.  Even then, sometimes it won't go away until a reboot.  I don't get it either.</p>
+
+    </div>
     
     
 
@@ -210,7 +214,7 @@
             			<tr valign='top'>
 				<td>Name</td>
 				<td><a href="http://msdn.microsoft.com/en-us/library/system.string.aspx">String</a></td>
-				<td>The service name
+				<td>The service name to delete.
 </td>
 				<td>true</td>
 				<td>false</td>
@@ -248,6 +252,9 @@
         
     
         
-    
+                <h2>EXAMPLE 1</h2>
+            <pre><code>Remove-Service -Name DeathStar</code></pre>
+            <p><p>Removes the Death Star Windows service.  It is destro..., er, stopped first, then destro..., er, deleted.  If only the rebels weren't using Linux!</p>
+</p><p></p><p></p><p></p><p></p>
 </body>
 </html>   
